framec_tests/language_specific/typescript/v3_facade_smoke/negative/strict_multi_errors.frm
@target typescript

system S {
    machine:
        $A {
            e() {
                -> $B();
                let a: Array<number = []; // missing '>'
                let b = ;                 // missing initializer
                if ({) { }                // malformed if condition
            }
        }
        $B {
        }
}

